# kali

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/kali-ast/: Cargo.toml  README.md
crates/kali-ast/src/: attr.rs  binary.rs  conditional.rs  expr.rs  func.rs  lib.rs  literal.rs  meta.rs  pattern.rs  rewriter.rs  ty.rs  unary.rs  visit.rs
crates/kali-ast2/: Cargo.toml
crates/kali-ast2/src/: lib.rs
crates/kali-ast3/: Cargo.toml
crates/kali-ast3/src/: lib.rs
crates/kali-cli/: Cargo.toml
crates/kali-cli/src/: compiler.rs  main.rs
crates/kali-codegen/: Cargo.toml
crates/kali-error/: Cargo.toml
crates/kali-ir/: Cargo.toml
crates/kali-lalrpop/: Cargo.toml
crates/kali-lalrpop/src/: grammar.lalrpop  lexer.rs  lib.rs
crates/kali-lalrpop/tests/: expressions.rs  imports.rs  items.rs  types.rs
crates/kali-parse/: Cargo.toml
crates/kali-parse/src/: ast.rs  common.rs  expr.rs  grammar.lalrpop  grammar.pest  ident.rs  kali.pest  lexer.rs  lib.rs  literal.rs  pattern.rs  span.rs  stmt.rs  ty_expr.rs  util.rs
crates/kali-parse/src/literal/: compound.rs  float.rs  int.rs  mod.rs
crates/kali-parse/src/stmt/: func.rs
crates/kali-parse/src/ty/: mod.rs
crates/kali-parse/tests/: lexer.kali
crates/kali-parse2/: Cargo.toml
crates/kali-parse3/: Cargo.toml
crates/kali-print/: Cargo.toml
crates/kali-runtime/: Cargo.toml
crates/kali-stack/: Cargo.toml
crates/kali-transform/: Cargo.toml
crates/kali-type/: Cargo.toml
crates/kali-vm/: Cargo.toml
examples/: add.flx  add.kali  array.kali  example.kali  fib.flx  fib.kali  greek.kali  modules.kali
spec/: SPECIFICATION.typ
(+41 files in other folders)
